Added code to film.html and music.html. Added file film.css, music.css, gulab.html and gulab.css, kota.html and kota.css filws

--- a/film.html
+++ b/film.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Film</title>
+    <title>Iconic Outfits From Movies</title>
+    <link rel="stylesheet" href="film.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="logo">
+            <img src="./img/myntra.png" alt="Logo" class="logoimg">
+            <p class="title">Maxine</p>
+        </div>
+        <a href="movie.html" class="movie">Film</a>
+        <a href="song.html" class="movie">Music</a>
+        <a href="#" class="movie">SStyle</a>
+        <a href="#" class="movie">Sport</a>
+    </div>
+    <div class="container">
+        <h1>Iconic Outfits From Movies</h1>
+        <div class="image-grid">
+            <a href="#" target="_blank" class="image-item item5">
+                <img src="./img/kalki1.jpeg" alt="Outfit 1">
+                <p class="data">Kalki</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item6">
+                <img src="./img/kalki2.jpeg" alt="Outfit 2">
+                <p class="data">Kalki</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item2">
+                <img src="./img/kalki3.jpeg" alt="Outfit 3">
+                <p class="data">Kalki</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item3">
+                <img src="./img/mirzapur1.jpeg" alt="Outfit 4">
+                <p class="data">Mirzapur-3</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item4">
+                <img src="./img/mirzapur3.jpeg" alt="Outfit 5">
+                <p class="data">Mirzapur-3</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item5">
+                <img src="./img/mirzapur2.jpeg" alt="Outfit 6">
+                <p class="data">Mirzapur-3</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item6">
+                <img src="./img/india1.jpeg" alt="Outfit 7">
+                <p class="data">India-2</p>
+            </a>
+            <a href="./kota.html" target="_blank" class="image-item item7">
+                <img src="./img/kotaFactory1.jpeg" alt="Outfit 8">
+                <p class="data">Kota Factory</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item8">
+                <img src="./img/kotaFactory2.jpeg" alt="Outfit 9">
+                <p class="data">Kota Factory</p>
+            </a>
+            <a href="#" target="_blank" class="image-item item9">
+                <img src="./img/houseDragon1.jpeg" alt="Outfit 10">
+                <p class="data">House Of Dragon</p>
+            </a>
+        </div>
+    </div>
+    <div class="more-images">
+        <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+    </div>
+
 </body>
 </html>
