--- a/gulab.html
+++ b/gulab.html
@@ -12,8 +12,8 @@
             <img src="./img/myntra.png" alt="Logo" class="logoimg">
             <p class="title">Maxine</p>
         </div>
-        <a href="movie.html" class="movie">Film</a>
-        <a href="song.html" class="movie">Music</a>
+        <a href="film.html" class="movie">Film</a>
+        <a href="music.html" class="movie">Music</a>
         <a href="#" class="movie">SStyle</a>
         <a href="#" class="movie">Sport</a>
     </div>
