--- a/intro.html
+++ b/intro.html
@@ -6,6 +6,7 @@
     <title>Welcome To Myntra Magazine</title>
     <style>
         body {
+            
             background-color: #F7D1D2;
             display: flex;
             justify-content: center;
@@ -13,11 +14,16 @@
             height: 100vh; /* Make the body full height of viewport */
             margin: 0;
         }
+        .container {
+            width: 740px;/* Set the width of the container */
+            text-align: center; /* Center align the content */
+        }
         .logo {
             height: 150px;
             width: 150px;
             position: relative;
             animation: enlargeLogo 3s forwards; /* Animation to enlarge logo */
+            margin: 0 auto; /* Center the logo inside the container */
         }
         .logo img {
             width: 100%;
